# healthy_habit_tracker

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: deploy  deploy.yaml  flake8.yml  test80.yml
config/: celery.py  settings.py  urls.py
main/: models.py  paginators.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_habit_frequency.py  0002_alter_habit_options.py  0003_alter_habit_time_to_complete.py
main/tests/: test_habit_model.py  test_permissions.py  test_send_telegram_message.py  test_send_tg_notification.py  test_signals.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_tg_id.py  0003_alter_customuser_tg_id.py  0004_alter_customuser_tg_id.py
