[tool.poetry]
name = "healthy-habit-tracker"
version = "0.1.0"
description = ""
authors = ["KudryashovR <romkud55@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django-environ = "^0.11.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
setuptools = "^74.0.0"
redis = "^5.0.8"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
python-telegram-bot = "^21.4"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
coverage = "^7.6.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
